--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -8,6 +8,6 @@
     </head>
         <body>
             <hi>Meatloaf</hi>
-            <img alt="Meatloaf" src="images/meatloaf.jpg">
+            <img alt="Meatloaf" src="../images/meatloaf.jpg">
         </body>
 </html>
