Complete meatloaf recipe page

--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -7,7 +7,48 @@
         <title>Meatloaf</title>
     </head>
         <body>
-            <hi>Meatloaf</hi>
-            <img alt="Meatloaf" src="../images/meatloaf.jpg">
+            <h1>Meatloaf</h1>
+            <div>
+                <img alt="Meatloaf" src="../images/meatloaf.jpg" style="height:300px">
+            </div>
+            <h2>Description</h2>
+            <p>
+            Amazing homemade Meatloaf Recipe. The meatloaf is
+            <br>so tender and juicy on the inside with a sweet and 
+            <br>tangy glaze that adds so much flavor to the meatloaf. 
+            <br>Serve the easy meatloaf with mashed potatoes and a side 
+            <br>of asparagus.
+             </p>
+            <h2>Ingredients</h2>
+            <ul>
+                <h3>Meatloaf</h3>
+                <li>2 lbs ground beef, 85% or 90% lean</li>
+                <li>1 med onion, finely chopped</li>
+                <li>2 large eggs</li>
+                <li>3 garlic cloves, minced</li>
+                <li>3 Tbsp ketchup</li>
+                <li>3 Tbsp fresh parsley, finely chopped</li>
+                <li>3/4 cup Panko breadcrumbs</li>   
+                <li>1/3 cup milk</li>
+                <li>1 ½ tsp salt, or to taste</li>
+                <li>1 ½ tsp Italian seasoning</li>
+                <li>¼ tsp ground black pepper</li>
+                <li>½ tsp ground paprika</li>
+                <h3>Sauce</h3>
+                <li>3/4 cup ketchup</li>
+                <li>1 ½ tsp white vinegar</li>
+                <li>2 ½ Tbsp brown sugar</li>
+                <li>1 tsp garlic powder</li>
+                <li>½ tsp onion powder</li>
+                <li>¼ tsp ground black pepper</li>
+                <li>¼ tsp salt</li>
+            </ul>
+            <h2>Steps</h2>
+            <ol>
+                <li>Line a 9”x5” loaf pan with parchment paper and preheat oven to 375°F.</li>
+                <li>In a large bowl, add all of the ingredients for the meatloaf. Mix well to combine.</li>
+                <li>Add meat to the loaf pan, gently press meat down and shape evenly and bake meatloaf at 375˚F for 40 minutes.</li>
+                <li>In a small bowl, mix all of the ingredients together for the sauce. Spread the sauce over meatloaf then return to oven and bake additional 15-20 minutes or until the internal temperature is 160˚F. Rest meatloaf 10 minutes before slicing. Drizzle with baking juices from the pan.  </li>
+            </ol>
         </body>
 </html>
