--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <body>
             <hi>Odin Recipes</hi>
             <a href="recipes/meatloaf.html">Meatloaf</a>
+            <a href="recipes/toast.html">Toast</a>
         </body>
 </html>
