--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
             <hi>Odin Recipes</hi>
             <a href="recipes/meatloaf.html">Meatloaf</a>
             <a href="recipes/toast.html">Toast</a>
+            <a href="recipes/egg.html">Boiled Egg</a>
         </body>
 </html>
