--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     </head>
         <body>
             <hi>Odin Recipes</hi>
-            <a href="recipes/meatloaf.html">Meatloaf</a>
-            <a href="recipes/toast.html">Toast</a>
-            <a href="recipes/egg.html">Boiled Egg</a>
+            <ul>
+                <li><a href="recipes/meatloaf.html">Meatloaf</a></li>
+                <li><a href="recipes/toast.html">Toast</a></li>
+                <li><a href="recipes/egg.html">Boiled Egg</a></li>
+            </ul>
         </body>
 </html>
